# compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.html  README.md  SConscript.py  SConstruct  jasmin_emitter.cpp  makefile
Chapter_3/: hilbert.pas  makefile
Chapter_3/wci/: Globals.cpp
Chapter_3/wci/backend/: Backend.cpp  Backend.h
Chapter_3/wci/frontend/: Scanner.cpp  Scanner.h  Source.cpp
Chapter_3/wci/frontend/java/: JavaError.cpp  JavaScanner.hpp  PascalParserTD.cpp  PascalParserTD.h
Chapter_3/wci/frontend/pascal/: PascalScanner.cpp  PascalToken.cpp
Chapter_3/wci/message/: MessageHandler.cpp  MessageHandler.h  MessageProducer.h
antlr/: .gitignore  C.g4  SConstruct  build_cpp.sh  build_java.sh  build_parser.sh  hello_world.c  quickanddirtyc.g4  token_dump.txt
antlr/antlr4-runtime/: antlr4-common.h
antlr/generated_java/: CBaseListener.java  CLexer.java  CListener.java  CParser.java  quickanddirtyc.tokens  quickanddirtycBaseListener.java  quickanddirtycLexer.java  quickanddirtycListener.java  quickanddirtycParser.java
antlr/grammars/: C.g4  Cmm.g4
antlr/junk/: CMakeCache.txt  CMakeLists.txt  ExternalAntlr4Cpp.cmake  Makefile  antlr_instructions.md  build.sh  clean.sh  cmake_install.cmake  main.cpp
antlr/junk/antlr4cpp_generated_src/antlrcpptest/: TLexer.cpp  TLexer.h  TParser.cpp  TParser.h  TParserBaseListener.cpp  TParserBaseListener.h  TParserBaseVisitor.cpp  TParserBaseVisitor.h  TParserListener.cpp  TParserListener.h  TParserVisitor.cpp  TParserVisitor.h
antlr/junk/mak/: TLexer.cpp  TLexer.h  TParser.cpp  TParser.h  TParserBaseListener.cpp  TParserBaseListener.h  TParserListener.cpp  TParserListener.h
antlr/output/: CBaseListener.cpp  CBaseListener.h  CLexer.cpp  CLexer.h  CListener.cpp  CListener.h  CParser.cpp  CParser.h
antlr/samples/: sample_bit.cpp  sample_program.c
antlr/sandbox/: CBaseListener.cpp  command.txt  compile.sh  link.sh  main.cpp
antlr/scripts/: build.sh
antlr/src/: main.cpp
antlr/to-be-deleted/antlr4-runtime/: Parser.h
antlr4-runtime/atn/: ATNSimulator.h
grammars/: Cmm.g4  Pcl2.g4
outputs/: s.j
pickle/: .gdb_history  HELLOOOOOOO_WORRRRRLD.j  README.md  SConscript.py  SConstruct  assemble.sh  compile.sh  print.j  quick_and_dirty_parsing.txt  s.j  sample.j  sample_func.j  sample_return.j  samplereturn.j  test.j
pickle/PROJECT/assembly/: s.j
pickle/PROJECT/grammar/: Pcl2.g4
pickle/PROJECT/sample/: s.c
pickle/PROJECT/src/: Pass2Visitor.cpp  Pass2Visitor.hpp  PassVisitor.hpp  common.hpp
pickle/antlr4-runtime/: Parser.cpp  antlr4-common.h
pickle/antlr4-runtime/tree/: AbstractParseTreeVisitor.h
pickle/grammars/: Pcl2.g4  backup2.g4  new.g
pickle/samples/: s.c  sample.c  sample.pas  sample2.c  sample2.pas  sample_return.c
pickle/scripts/: build.sh  recompile_runtime.sh
pickle/src/: Pass1Visitor.cpp  Pass1Visitor.h  Pass1Visitor.hpp  Pass2Visitor.cpp  Pass2Visitor.h  Pass2Visitor.hpp  PassVisitor.cpp  PassVisitor.hpp  Pcl2.cpp  Pcl2Parser.h  Pcl2Visitor.cpp  common.cpp  common.hpp  main.cpp
pickle/src/to-be-integrated/utils/: ConstObject.hpp
pickle/src/wci/: DataValue.h
pickle/src/wci/util/: CrossReferencer.cpp  ParseTreePrinter.h
samples/: s.c
scripts/: assemble.sh  build.sh  compile.sh  recompile_runtime.sh
src/: CustomException.hpp  Pascal.cpp  Pass1Visitor.cpp  Pass1Visitor.hpp  Pass2Visitor.cpp  Pass2Visitor.hpp  PassVisitor.cpp  PassVisitor.hpp  SConstruct  globals.hpp  main.cpp
src/10/: Pascal.cpp  Pascal.h  makefile  stack_trace.cpp
src/10/wci/: Object.h
src/10/wci/backend/: Backend.h  BackendFactory.cpp
src/10/wci/frontend/: FrontendFactory.cpp  FrontendFactory.h  Parser.cpp  Source.cpp  Token.cpp
src/10/wci/util/: CrossReferencer.cpp  CrossReferencer.h  ParseTreePrinter.cpp
src/2/: Pascal.h  README  hello.pas  makefile_dependencies.txt
src/2/wci/frontend/: Token.h
src/2/wci/message/: Message.cpp  MessageListener.h
src/3/: Pascal.cpp  Pascal.h  bug.cpp  debug_scanner.cpp  hello.pas  javatest.in  javatest.out  makefile  wolfisland.pas
src/3/wci/: Globals.cpp  Object.h
src/3/wci/backend/: Backend.h  BackendFactory.cpp
src/3/wci/frontend/: FrontendFactory.h  Parser.cpp  Parser.h  Scanner.cpp  Token.h  (+3 more)
src/8/: Pascal.cpp  assignerrors.txt  assignments.txt  makefile  when.out  when.txt  while.txt
src/backend/: AssignmentExecutor.hpp  StatementExecutor.hpp
src/backend/common/: JasminEmitter.cpp  JasminEmitter.hpp  PassVisitor.cpp  PassVisitor.hpp  TypeSpecifier.cpp  TypeSpecifier.hpp
src/backend/pass1/: Pass1Visitor.cpp  Pass1Visitor.hpp  pass1_visitor_common.cpp  pass1_visitor_declarations.cpp  pass1_visitor_expressions.cpp  pass1_visitor_functions.cpp  pass1_visitor_statements.cpp
src/backend/pass2/: Pass2Visitor.cpp  Pass2Visitor.hpp  pass2_visitor_common.cpp  pass2_visitor_declarations.cpp  pass2_visitor_expressions.cpp  pass2_visitor_functions.cpp  pass2_visitor_statements.cpp
src/common/: CustomException.hpp  common.hpp
src/dev/: SConstruct  comment.cpp  main.cpp  test.c
src/dev/backend/: Executor.hpp
src/dev/frontend/: ErrorHandler.hpp  Parser.cpp  Parser.hpp  ParserErrorHandler.hpp  Token.cpp  Token.hpp  TokenTypes.hpp
src/frontend/: ErrorHandler.hpp  ExecutorErrorHandler.hpp  Parser.cpp  ParserErrorHandler.hpp  TokenTypes.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/to-be-integrated/backend/: JasminEmitter.hpp  TypeSpecifier.hpp
src/utils/: FormatStringParser.hpp  Logger.cpp  TypeResolver.cpp  TypeResolver.hpp  logger.hpp
src/wci/frontend/: Source.h  Token.cpp
src/wci/util/: ParseTreePrinter.cpp
temp/: Pcl2BaseVisitor.cpp  Pcl2BaseVisitor.h  Pcl2Lexer.cpp  Pcl2Parser.cpp  Pcl2Visitor.h
to-be-deleted/: Pcl2Lexer.h
to-be-deleted/antlr/: SConscript.py
to-be-deleted/antlr/antlr4-runtime/: antlr4-common.h
to-be-deleted/antlr/grammars/: C.g4
to-be-deleted/src/10/: ComplexAssignments.txt  README  block.txt
to-be-deleted/src/3/: Pascal.cpp  README  javatest.in  notes.cpp
to-be-deleted/src/8/: Pascal.h  README  if.txt  whenerrors.out  whenerrors.txt
to-be-deleted/src/dev/: globals.hpp
unused/: TypeChecker.h
(+210 files in other folders)
