cmake_minimum_required(VERSION 3.10)
project(compiler)

set(CMAKE_CXX_STANDARD 11)

include_directories(pickle/antlr4-runtime)
include_directories(pickle/antlr4-runtime/atn)
include_directories(pickle/antlr4-runtime/dfa)
include_directories(pickle/antlr4-runtime/misc)
include_directories(pickle/antlr4-runtime/support)
include_directories(pickle/antlr4-runtime/tree)
include_directories(pickle/antlr4-runtime/tree/pattern)
include_directories(pickle/antlr4-runtime/tree/xpath)
include_directories(pickle/generated)
include_directories(pickle/src)
include_directories(pickle/src/wci)
include_directories(pickle/src/wci/intermediate)
include_directories(pickle/src/wci/intermediate/icodeimpl)
include_directories(pickle/src/wci/intermediate/symtabimpl)
include_directories(pickle/src/wci/intermediate/typeimpl)
include_directories(pickle/src/wci/util)

add_executable(compiler
        pickle/antlr4-runtime/atn/AbstractPredicateTransition.cpp
        pickle/antlr4-runtime/atn/AbstractPredicateTransition.h
        pickle/antlr4-runtime/atn/ActionTransition.cpp
        pickle/antlr4-runtime/atn/ActionTransition.h
        pickle/antlr4-runtime/atn/AmbiguityInfo.cpp
        pickle/antlr4-runtime/atn/AmbiguityInfo.h
        pickle/antlr4-runtime/atn/ArrayPredictionContext.cpp
        pickle/antlr4-runtime/atn/ArrayPredictionContext.h
        pickle/antlr4-runtime/atn/ATN.cpp
        pickle/antlr4-runtime/atn/ATN.h
        pickle/antlr4-runtime/atn/ATNConfig.cpp
        pickle/antlr4-runtime/atn/ATNConfig.h
        pickle/antlr4-runtime/atn/ATNConfigSet.cpp
        pickle/antlr4-runtime/atn/ATNConfigSet.h
        pickle/antlr4-runtime/atn/ATNDeserializationOptions.cpp
        pickle/antlr4-runtime/atn/ATNDeserializationOptions.h
        pickle/antlr4-runtime/atn/ATNDeserializer.cpp
        pickle/antlr4-runtime/atn/ATNDeserializer.h
        pickle/antlr4-runtime/atn/ATNSerializer.cpp
        pickle/antlr4-runtime/atn/ATNSerializer.h
        pickle/antlr4-runtime/atn/ATNSimulator.cpp
        pickle/antlr4-runtime/atn/ATNSimulator.h
        pickle/antlr4-runtime/atn/ATNState.cpp
        pickle/antlr4-runtime/atn/ATNState.h
        pickle/antlr4-runtime/atn/ATNType.h
        pickle/antlr4-runtime/atn/AtomTransition.cpp
        pickle/antlr4-runtime/atn/AtomTransition.h
        pickle/antlr4-runtime/atn/BasicBlockStartState.cpp
        pickle/antlr4-runtime/atn/BasicBlockStartState.h
        pickle/antlr4-runtime/atn/BasicState.cpp
        pickle/antlr4-runtime/atn/BasicState.h
        pickle/antlr4-runtime/atn/BlockEndState.cpp
        pickle/antlr4-runtime/atn/BlockEndState.h
        pickle/antlr4-runtime/atn/BlockStartState.cpp
        pickle/antlr4-runtime/atn/BlockStartState.h
        pickle/antlr4-runtime/atn/ContextSensitivityInfo.cpp
        pickle/antlr4-runtime/atn/ContextSensitivityInfo.h
        pickle/antlr4-runtime/atn/DecisionEventInfo.cpp
        pickle/antlr4-runtime/atn/DecisionEventInfo.h
        pickle/antlr4-runtime/atn/DecisionInfo.cpp
        pickle/antlr4-runtime/atn/DecisionInfo.h
        pickle/antlr4-runtime/atn/DecisionState.cpp
        pickle/antlr4-runtime/atn/DecisionState.h
        pickle/antlr4-runtime/atn/EmptyPredictionContext.cpp
        pickle/antlr4-runtime/atn/EmptyPredictionContext.h
        pickle/antlr4-runtime/atn/EpsilonTransition.cpp
        pickle/antlr4-runtime/atn/EpsilonTransition.h
        pickle/antlr4-runtime/atn/ErrorInfo.cpp
        pickle/antlr4-runtime/atn/ErrorInfo.h
        pickle/antlr4-runtime/atn/LexerAction.cpp
        pickle/antlr4-runtime/atn/LexerAction.h
        pickle/antlr4-runtime/atn/LexerActionExecutor.cpp
        pickle/antlr4-runtime/atn/LexerActionExecutor.h
        pickle/antlr4-runtime/atn/LexerActionType.h
        pickle/antlr4-runtime/atn/LexerATNConfig.cpp
        pickle/antlr4-runtime/atn/LexerATNConfig.h
        pickle/antlr4-runtime/atn/LexerATNSimulator.cpp
        pickle/antlr4-runtime/atn/LexerATNSimulator.h
        pickle/antlr4-runtime/atn/LexerChannelAction.cpp
        pickle/antlr4-runtime/atn/LexerChannelAction.h
        pickle/antlr4-runtime/atn/LexerCustomAction.cpp
        pickle/antlr4-runtime/atn/LexerCustomAction.h
        pickle/antlr4-runtime/atn/LexerIndexedCustomAction.cpp
        pickle/antlr4-runtime/atn/LexerIndexedCustomAction.h
        pickle/antlr4-runtime/atn/LexerModeAction.cpp
        pickle/antlr4-runtime/atn/LexerModeAction.h
        pickle/antlr4-runtime/atn/LexerMoreAction.cpp
        pickle/antlr4-runtime/atn/LexerMoreAction.h
        pickle/antlr4-runtime/atn/LexerPopModeAction.cpp
        pickle/antlr4-runtime/atn/LexerPopModeAction.h
        pickle/antlr4-runtime/atn/LexerPushModeAction.cpp
        pickle/antlr4-runtime/atn/LexerPushModeAction.h
        pickle/antlr4-runtime/atn/LexerSkipAction.cpp
        pickle/antlr4-runtime/atn/LexerSkipAction.h
        pickle/antlr4-runtime/atn/LexerTypeAction.cpp
        pickle/antlr4-runtime/atn/LexerTypeAction.h
        pickle/antlr4-runtime/atn/LL1Analyzer.cpp
        pickle/antlr4-runtime/atn/LL1Analyzer.h
        pickle/antlr4-runtime/atn/LookaheadEventInfo.cpp
        pickle/antlr4-runtime/atn/LookaheadEventInfo.h
        pickle/antlr4-runtime/atn/LoopEndState.cpp
        pickle/antlr4-runtime/atn/LoopEndState.h
        pickle/antlr4-runtime/atn/NotSetTransition.cpp
        pickle/antlr4-runtime/atn/NotSetTransition.h
        pickle/antlr4-runtime/atn/OrderedATNConfigSet.cpp
        pickle/antlr4-runtime/atn/OrderedATNConfigSet.h
        pickle/antlr4-runtime/atn/ParseInfo.cpp
        pickle/antlr4-runtime/atn/ParseInfo.h
        pickle/antlr4-runtime/atn/ParserATNSimulator.cpp
        pickle/antlr4-runtime/atn/ParserATNSimulator.h
        pickle/antlr4-runtime/atn/PlusBlockStartState.cpp
        pickle/antlr4-runtime/atn/PlusBlockStartState.h
        pickle/antlr4-runtime/atn/PlusLoopbackState.cpp
        pickle/antlr4-runtime/atn/PlusLoopbackState.h
        pickle/antlr4-runtime/atn/PrecedencePredicateTransition.cpp
        pickle/antlr4-runtime/atn/PrecedencePredicateTransition.h
        pickle/antlr4-runtime/atn/PredicateEvalInfo.cpp
        pickle/antlr4-runtime/atn/PredicateEvalInfo.h
        pickle/antlr4-runtime/atn/PredicateTransition.cpp
        pickle/antlr4-runtime/atn/PredicateTransition.h
        pickle/antlr4-runtime/atn/PredictionContext.cpp
        pickle/antlr4-runtime/atn/PredictionContext.h
        pickle/antlr4-runtime/atn/PredictionMode.cpp
        pickle/antlr4-runtime/atn/PredictionMode.h
        pickle/antlr4-runtime/atn/ProfilingATNSimulator.cpp
        pickle/antlr4-runtime/atn/ProfilingATNSimulator.h
        pickle/antlr4-runtime/atn/RangeTransition.cpp
        pickle/antlr4-runtime/atn/RangeTransition.h
        pickle/antlr4-runtime/atn/RuleStartState.cpp
        pickle/antlr4-runtime/atn/RuleStartState.h
        pickle/antlr4-runtime/atn/RuleStopState.cpp
        pickle/antlr4-runtime/atn/RuleStopState.h
        pickle/antlr4-runtime/atn/RuleTransition.cpp
        pickle/antlr4-runtime/atn/RuleTransition.h
        pickle/antlr4-runtime/atn/SemanticContext.cpp
        pickle/antlr4-runtime/atn/SemanticContext.h
        pickle/antlr4-runtime/atn/SetTransition.cpp
        pickle/antlr4-runtime/atn/SetTransition.h
        pickle/antlr4-runtime/atn/SingletonPredictionContext.cpp
        pickle/antlr4-runtime/atn/SingletonPredictionContext.h
        pickle/antlr4-runtime/atn/StarBlockStartState.cpp
        pickle/antlr4-runtime/atn/StarBlockStartState.h
        pickle/antlr4-runtime/atn/StarLoopbackState.cpp
        pickle/antlr4-runtime/atn/StarLoopbackState.h
        pickle/antlr4-runtime/atn/StarLoopEntryState.cpp
        pickle/antlr4-runtime/atn/StarLoopEntryState.h
        pickle/antlr4-runtime/atn/TokensStartState.cpp
        pickle/antlr4-runtime/atn/TokensStartState.h
        pickle/antlr4-runtime/atn/Transition.cpp
        pickle/antlr4-runtime/atn/Transition.h
        pickle/antlr4-runtime/atn/WildcardTransition.cpp
        pickle/antlr4-runtime/atn/WildcardTransition.h
        pickle/antlr4-runtime/dfa/DFA.cpp
        pickle/antlr4-runtime/dfa/DFA.h
        pickle/antlr4-runtime/dfa/DFASerializer.cpp
        pickle/antlr4-runtime/dfa/DFASerializer.h
        pickle/antlr4-runtime/dfa/DFAState.cpp
        pickle/antlr4-runtime/dfa/DFAState.h
        pickle/antlr4-runtime/dfa/LexerDFASerializer.cpp
        pickle/antlr4-runtime/dfa/LexerDFASerializer.h
        pickle/antlr4-runtime/misc/InterpreterDataReader.cpp
        pickle/antlr4-runtime/misc/InterpreterDataReader.h
        pickle/antlr4-runtime/misc/Interval.cpp
        pickle/antlr4-runtime/misc/Interval.h
        pickle/antlr4-runtime/misc/IntervalSet.cpp
        pickle/antlr4-runtime/misc/IntervalSet.h
        pickle/antlr4-runtime/misc/MurmurHash.cpp
        pickle/antlr4-runtime/misc/MurmurHash.h
        pickle/antlr4-runtime/misc/Predicate.cpp
        pickle/antlr4-runtime/misc/Predicate.h
        pickle/antlr4-runtime/support/Any.cpp
        pickle/antlr4-runtime/support/Any.h
        pickle/antlr4-runtime/support/Arrays.cpp
        pickle/antlr4-runtime/support/Arrays.h
        pickle/antlr4-runtime/support/BitSet.h
        pickle/antlr4-runtime/support/CPPUtils.cpp
        pickle/antlr4-runtime/support/CPPUtils.h
        pickle/antlr4-runtime/support/Declarations.h
        pickle/antlr4-runtime/support/guid.cpp
        pickle/antlr4-runtime/support/guid.h
        pickle/antlr4-runtime/support/StringUtils.cpp
        pickle/antlr4-runtime/support/StringUtils.h
        pickle/antlr4-runtime/tree/pattern/Chunk.cpp
        pickle/antlr4-runtime/tree/pattern/Chunk.h
        pickle/antlr4-runtime/tree/pattern/ParseTreeMatch.cpp
        pickle/antlr4-runtime/tree/pattern/ParseTreeMatch.h
        pickle/antlr4-runtime/tree/pattern/ParseTreePattern.cpp
        pickle/antlr4-runtime/tree/pattern/ParseTreePattern.h
        pickle/antlr4-runtime/tree/pattern/ParseTreePatternMatcher.cpp
        pickle/antlr4-runtime/tree/pattern/ParseTreePatternMatcher.h
        pickle/antlr4-runtime/tree/pattern/RuleTagToken.cpp
        pickle/antlr4-runtime/tree/pattern/RuleTagToken.h
        pickle/antlr4-runtime/tree/pattern/TagChunk.cpp
        pickle/antlr4-runtime/tree/pattern/TagChunk.h
        pickle/antlr4-runtime/tree/pattern/TextChunk.cpp
        pickle/antlr4-runtime/tree/pattern/TextChunk.h
        pickle/antlr4-runtime/tree/pattern/TokenTagToken.cpp
        pickle/antlr4-runtime/tree/pattern/TokenTagToken.h
        pickle/antlr4-runtime/tree/xpath/XPath.cpp
        pickle/antlr4-runtime/tree/xpath/XPath.h
        pickle/antlr4-runtime/tree/xpath/XPathElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathElement.h
        pickle/antlr4-runtime/tree/xpath/XPathLexer.cpp
        pickle/antlr4-runtime/tree/xpath/XPathLexer.h
        pickle/antlr4-runtime/tree/xpath/XPathLexerErrorListener.cpp
        pickle/antlr4-runtime/tree/xpath/XPathLexerErrorListener.h
        pickle/antlr4-runtime/tree/xpath/XPathRuleAnywhereElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathRuleAnywhereElement.h
        pickle/antlr4-runtime/tree/xpath/XPathRuleElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathRuleElement.h
        pickle/antlr4-runtime/tree/xpath/XPathTokenAnywhereElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathTokenAnywhereElement.h
        pickle/antlr4-runtime/tree/xpath/XPathTokenElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathTokenElement.h
        pickle/antlr4-runtime/tree/xpath/XPathWildcardAnywhereElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathWildcardAnywhereElement.h
        pickle/antlr4-runtime/tree/xpath/XPathWildcardElement.cpp
        pickle/antlr4-runtime/tree/xpath/XPathWildcardElement.h
        pickle/antlr4-runtime/tree/AbstractParseTreeVisitor.h
        pickle/antlr4-runtime/tree/ErrorNode.cpp
        pickle/antlr4-runtime/tree/ErrorNode.h
        pickle/antlr4-runtime/tree/ErrorNodeImpl.cpp
        pickle/antlr4-runtime/tree/ErrorNodeImpl.h
        pickle/antlr4-runtime/tree/IterativeParseTreeWalker.cpp
        pickle/antlr4-runtime/tree/IterativeParseTreeWalker.h
        pickle/antlr4-runtime/tree/ParseTree.cpp
        pickle/antlr4-runtime/tree/ParseTree.h
        pickle/antlr4-runtime/tree/ParseTreeListener.cpp
        pickle/antlr4-runtime/tree/ParseTreeListener.h
        pickle/antlr4-runtime/tree/ParseTreeProperty.h
        pickle/antlr4-runtime/tree/ParseTreeVisitor.cpp
        pickle/antlr4-runtime/tree/ParseTreeVisitor.h
        pickle/antlr4-runtime/tree/ParseTreeWalker.cpp
        pickle/antlr4-runtime/tree/ParseTreeWalker.h
        pickle/antlr4-runtime/tree/TerminalNode.cpp
        pickle/antlr4-runtime/tree/TerminalNode.h
        pickle/antlr4-runtime/tree/TerminalNodeImpl.cpp
        pickle/antlr4-runtime/tree/TerminalNodeImpl.h
        pickle/antlr4-runtime/tree/Trees.cpp
        pickle/antlr4-runtime/tree/Trees.h
        pickle/antlr4-runtime/antlr4-common.h
        pickle/antlr4-runtime/antlr4-runtime.h
        pickle/antlr4-runtime/ANTLRErrorListener.cpp
        pickle/antlr4-runtime/ANTLRErrorListener.h
        pickle/antlr4-runtime/ANTLRErrorStrategy.cpp
        pickle/antlr4-runtime/ANTLRErrorStrategy.h
        pickle/antlr4-runtime/ANTLRFileStream.cpp
        pickle/antlr4-runtime/ANTLRFileStream.h
        pickle/antlr4-runtime/ANTLRInputStream.cpp
        pickle/antlr4-runtime/ANTLRInputStream.h
        pickle/antlr4-runtime/BailErrorStrategy.cpp
        pickle/antlr4-runtime/BailErrorStrategy.h
        pickle/antlr4-runtime/BaseErrorListener.cpp
        pickle/antlr4-runtime/BaseErrorListener.h
        pickle/antlr4-runtime/BufferedTokenStream.cpp
        pickle/antlr4-runtime/BufferedTokenStream.h
        pickle/antlr4-runtime/CharStream.cpp
        pickle/antlr4-runtime/CharStream.h
        pickle/antlr4-runtime/CommonToken.cpp
        pickle/antlr4-runtime/CommonToken.h
        pickle/antlr4-runtime/CommonTokenFactory.cpp
        pickle/antlr4-runtime/CommonTokenFactory.h
        pickle/antlr4-runtime/CommonTokenStream.cpp
        pickle/antlr4-runtime/CommonTokenStream.h
        pickle/antlr4-runtime/ConsoleErrorListener.cpp
        pickle/antlr4-runtime/ConsoleErrorListener.h
        pickle/antlr4-runtime/DefaultErrorStrategy.cpp
        pickle/antlr4-runtime/DefaultErrorStrategy.h
        pickle/antlr4-runtime/DiagnosticErrorListener.cpp
        pickle/antlr4-runtime/DiagnosticErrorListener.h
        pickle/antlr4-runtime/Exceptions.cpp
        pickle/antlr4-runtime/Exceptions.h
        pickle/antlr4-runtime/FailedPredicateException.cpp
        pickle/antlr4-runtime/FailedPredicateException.h
        pickle/antlr4-runtime/InputMismatchException.cpp
        pickle/antlr4-runtime/InputMismatchException.h
        pickle/antlr4-runtime/InterpreterRuleContext.cpp
        pickle/antlr4-runtime/InterpreterRuleContext.h
        pickle/antlr4-runtime/IntStream.cpp
        pickle/antlr4-runtime/IntStream.h
        pickle/antlr4-runtime/Lexer.cpp
        pickle/antlr4-runtime/Lexer.h
        pickle/antlr4-runtime/LexerInterpreter.cpp
        pickle/antlr4-runtime/LexerInterpreter.h
        pickle/antlr4-runtime/LexerNoViableAltException.cpp
        pickle/antlr4-runtime/LexerNoViableAltException.h
        pickle/antlr4-runtime/ListTokenSource.cpp
        pickle/antlr4-runtime/ListTokenSource.h
        pickle/antlr4-runtime/NoViableAltException.cpp
        pickle/antlr4-runtime/NoViableAltException.h
        pickle/antlr4-runtime/Parser.cpp
        pickle/antlr4-runtime/Parser.h
        pickle/antlr4-runtime/ParserInterpreter.cpp
        pickle/antlr4-runtime/ParserInterpreter.h
        pickle/antlr4-runtime/ParserRuleContext.cpp
        pickle/antlr4-runtime/ParserRuleContext.h
        pickle/antlr4-runtime/ProxyErrorListener.cpp
        pickle/antlr4-runtime/ProxyErrorListener.h
        pickle/antlr4-runtime/RecognitionException.cpp
        pickle/antlr4-runtime/RecognitionException.h
        pickle/antlr4-runtime/Recognizer.cpp
        pickle/antlr4-runtime/Recognizer.h
        pickle/antlr4-runtime/RuleContext.cpp
        pickle/antlr4-runtime/RuleContext.h
        pickle/antlr4-runtime/RuleContextWithAltNum.cpp
        pickle/antlr4-runtime/RuleContextWithAltNum.h
        pickle/antlr4-runtime/RuntimeMetaData.cpp
        pickle/antlr4-runtime/RuntimeMetaData.h
        pickle/antlr4-runtime/Token.cpp
        pickle/antlr4-runtime/Token.h
        pickle/antlr4-runtime/TokenFactory.h
        pickle/antlr4-runtime/TokenSource.cpp
        pickle/antlr4-runtime/TokenSource.h
        pickle/antlr4-runtime/TokenStream.cpp
        pickle/antlr4-runtime/TokenStream.h
        pickle/antlr4-runtime/TokenStreamRewriter.cpp
        pickle/antlr4-runtime/TokenStreamRewriter.h
        pickle/antlr4-runtime/UnbufferedCharStream.cpp
        pickle/antlr4-runtime/UnbufferedCharStream.h
        pickle/antlr4-runtime/UnbufferedTokenStream.cpp
        pickle/antlr4-runtime/UnbufferedTokenStream.h
        pickle/antlr4-runtime/Vocabulary.cpp
        pickle/antlr4-runtime/Vocabulary.h
        pickle/antlr4-runtime/WritableToken.cpp
        pickle/antlr4-runtime/WritableToken.h
        pickle/generated/Pcl2BaseListener.cpp
        pickle/generated/Pcl2BaseListener.h
        pickle/generated/Pcl2BaseVisitor.cpp
        pickle/generated/Pcl2BaseVisitor.h
        pickle/generated/Pcl2Lexer.cpp
        pickle/generated/Pcl2Lexer.h
        pickle/generated/Pcl2Listener.cpp
        pickle/generated/Pcl2Listener.h
        pickle/generated/Pcl2Parser.cpp
        pickle/generated/Pcl2Parser.h
        pickle/generated/Pcl2Visitor.cpp
        pickle/generated/Pcl2Visitor.h
        pickle/src/wci/intermediate/icodeimpl/ICodeImpl.cpp
        pickle/src/wci/intermediate/icodeimpl/ICodeImpl.h
        pickle/src/wci/intermediate/icodeimpl/ICodeNodeImpl.cpp
        pickle/src/wci/intermediate/icodeimpl/ICodeNodeImpl.h
        pickle/src/wci/intermediate/symtabimpl/Predefined.cpp
        pickle/src/wci/intermediate/symtabimpl/Predefined.h
        pickle/src/wci/intermediate/symtabimpl/SymTabEntryImpl.cpp
        pickle/src/wci/intermediate/symtabimpl/SymTabEntryImpl.h
        pickle/src/wci/intermediate/symtabimpl/SymTabImpl.cpp
        pickle/src/wci/intermediate/symtabimpl/SymTabImpl.h
        pickle/src/wci/intermediate/symtabimpl/SymTabStackImpl.cpp
        pickle/src/wci/intermediate/symtabimpl/SymTabStackImpl.h
        pickle/src/wci/intermediate/typeimpl/TypeChecker.cpp
        pickle/src/wci/intermediate/typeimpl/TypeChecker.h
        pickle/src/wci/intermediate/typeimpl/TypeSpecImpl.cpp
        pickle/src/wci/intermediate/typeimpl/TypeSpecImpl.h
        pickle/src/wci/intermediate/ICode.h
        pickle/src/wci/intermediate/ICodeFactory.cpp
        pickle/src/wci/intermediate/ICodeFactory.h
        pickle/src/wci/intermediate/ICodeNode.h
        pickle/src/wci/intermediate/SymTab.h
        pickle/src/wci/intermediate/SymTabEntry.h
        pickle/src/wci/intermediate/SymTabFactory.cpp
        pickle/src/wci/intermediate/SymTabFactory.h
        pickle/src/wci/intermediate/SymTabStack.h
        pickle/src/wci/intermediate/TypeFactory.cpp
        pickle/src/wci/intermediate/TypeFactory.h
        pickle/src/wci/intermediate/TypeSpec.cpp
        pickle/src/wci/intermediate/TypeSpec.h
        pickle/src/wci/util/CrossReferencer.cpp
        pickle/src/wci/util/CrossReferencer.h
        pickle/src/wci/util/ParseTreePrinter.cpp
        pickle/src/wci/util/ParseTreePrinter.h
        pickle/src/wci/DataValue.h
        pickle/src/main.cpp
        pickle/src/Pass1Visitor.cpp
        pickle/src/Pass1Visitor.hpp
        pickle/src/Pass2Visitor.cpp
        pickle/src/Pass2Visitor.hpp
        pickle/src/PassVisitor.cpp
        pickle/src/PassVisitor.hpp
        jasmin_emitter.cpp)
